# LRHC

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  ReadMemo.txt  build.gradle
app/libs/: opencv-2411.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/: Test.java
app/src/main/java/com/dornbachs/zebra/: TGApplication.java
app/src/main/java/com/lrkj/: LrApplication.java  LrMsgService.java
app/src/main/java/com/lrkj/business/: LrLogics.java  LrNativeApi.java  LrRobot.java
app/src/main/java/com/lrkj/defines/: LrDefines.java
app/src/main/java/com/lrkj/utils/: CrashHandler.java  LrSocketBridgeViewBase.java  LrSocketSurfaceView.java  LrToast.java  MyActivityLifecycleCallbacks.java  PGM.java  PgmImage.java
app/src/main/java/com/lrkj/views/: LrActAllMap.java  LrActEditMap.java  LrActMakeMap.java  LrActNavi.java  LrActSystem.java  LrBaseAct.java  LrFragMenu.java  LrMainEntryAct.java
app/src/main/java/com/lrkj/widget/: BakedBezierInterpolator.java  CircleMenuLayout.java  (+9 more)
app/src/main/java/hwj/opencvjni/: MainActivity.java  OpenCVHelper.java
app/src/main/jni/: MyLib.cpp  com_lrkj_business_LrNativeApi.h  hwj_opencvjni_OpenCVHelper.h  navigation.cpp
app/src/main/res/layout/: activity_all_maps.xml  activity_edit_map.xml  activity_main.xml  activity_main_entry.xml  activity_make_map.xml  activity_navi.xml  activity_system.xml  dialog_seekbar.xml  fragment_ip.xml  fragment_menu.xml  item_map.xml  test.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  values.xml
(+40 files in other folders)
